--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <h4>h4</h4>
 <h5>h5</h5>
 <h6>h6</h6>
+<p>
+  <em>Hello World!</em>
+  <strong>Warning!</strong>
+</p>
 <p>Hello World</p>
 
 <p>Hello Moon</p>
