--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
   Text Formatting in HTML
 
   <!-- Test 2: Wrap the subtitle below, 'A Love Story', in `h2` tags -->
-  A Love Story
+  <h2></h2>A Love Story
 
   <!-- Test 3: Wrap the heading below, 'Chapter 1', in `h3` tags -->
-  Chapter One
+  <h3>Chapter One</h3>
 
   <!-- Test 4: Wrap the following two text blocks in separate `p` tags -->
   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
